--- a/Unit_Grid_Unit02.html
+++ b/Unit_Grid_Unit02.html
@@ -31,7 +31,7 @@
 </div>
 
 <div class="lea-vect-row">
-    <div class="lea-vect-col-4 lea-vect-grid-content">
+    <div class="lea-vect-col-4 lea-vect-grid-content lea-vect-wrap">
         <p class="lea-vect-grid-subject">Principles of Flight<br>(Part 2 of 12)</p>
     </div>
     <div class="lea-vect-col-8  lea-vect-grid-content lea-vect-wrap">
@@ -47,7 +47,7 @@
 </div>
 
 <div class="lea-vect-row">
-    <div class="lea-vect-col-4 lea-vect-grid-content">
+    <div class="lea-vect-col-4 lea-vect-grid-content lea-vect-wrap">
         <p class="lea-vect-grid-subject">Human Performance<br>(Part 2 of 11)</p>
     </div>
     <div class="lea-vect-col-8  lea-vect-grid-content lea-vect-wrap">
@@ -60,7 +60,7 @@
 </div>
 
 <div class="lea-vect-row">
-    <div class="lea-vect-col-4 lea-vect-grid-content">
+    <div class="lea-vect-col-4 lea-vect-grid-content lea-vect-wrap">
         <p class="lea-vect-grid-subject">AGK Airframes and Systems<br>(Part 2 of 8)</p>
     </div>
     <div class="lea-vect-col-8  lea-vect-grid-content lea-vect-wrap">
