--- a/Vimeo.html
+++ b/Vimeo.html
@@ -1,4 +1,4 @@
 <div class="lea-vect-vimeo">
-    <iframe src="https://player.vimeo.com/video/649136361?h=01b4b2f804&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Vector_Intro"></iframe>
+    <iframe src="https://player.vimeo.com/video/649136361?h=01b4b2f804&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Vector_Intro"></iframe>
 </div>
 <script src="https://player.vimeo.com/api/player.js"></script>
