--- a/Waypoint_13.html
+++ b/Waypoint_13.html
@@ -1,3 +1,4 @@
+<title>Waypoint 13</title>
 <div class="lea-vect-row lea-vect-completed ">
     <div class="lea-vect-col-1 lea-vect-waypoint-box">
         <i class="fa fa-road" aria-hidden="true"></i>
@@ -6,11 +7,11 @@
     </div>
 
     <div class="lea-vect-col-1 lea-vect-waypoint-hours">
-        <h2>224</h2>
+        <h2>227</h2>
         <p>hours</p>
     </div>
 
 
 
-<div class="lea-vect-col-10 lea-vect-completed-text"> You have completed 224 hours of study.  We will now review your progress and recommend any additional training we feel would help you to reach the standard necessary to fully benefit from the Module Consolidation. When you have achieved the required standard you will be invited the next set of Module Consolidation sessions.</div>
+<div class="lea-vect-col-10 lea-vect-completed-text">I have read the required PadPilot chapters, and reviewed the recommended revision materials. I am satisfied that I have completed the Unit Twelve learning content and that I am now ready to attempt the end of unit test.</div>
 </div>
