--- a/EndofModuleOne_IndividualProgramme.html
+++ b/EndofModuleOne_IndividualProgramme.html
@@ -1,5 +1,5 @@
 <div class="lea-vect-studyplan">
-    <p>Well done you have completed the Distance Learning component for Module One of the Vector Programme.</p>>
+    <p>Well done you have completed the Distance Learning component for Module One of the Vector Programme.</p>
     <p>To have go this far you have done extensive reading, a number of revision exercises and have passed a number of summative School Final assessments.</p>
     <p>The next step now is to complete your individual study plan.  The purpose of this plan is to ensure that you are ready to take full advantage of the five day, module one onsite Consolidation Training.</p>
     <p>The Individual Study Plan will be unique to your learning needs, the length of time to complete it may vary but once you have successfully completed that study plan we will book you on the next available Consolidation Training event.</p>
